Prueba de correcion de nav

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -29,9 +29,8 @@
         </ul>
       </nav>
     </div>
-    <div class="w-auto nav__links flex justify-center">
-      <!-- <ThemeIcon /> -->
-      <a class="hover:border-b-2" href="/About">Byron Tito</a>
+    <div class="nav__links  text-center">
+      <a class="hover:border-b-2 ease-in" href="/About">Byron Tito</a>
     </div>
   </div>
 </header>
