Intento de arreglo

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,7 +4,7 @@
 
 <header class="navigation fixed backdrop-blur-2xl top-0 mb-10 z-50 w-full">
   <div class="md:flex lg:gap-64 p-2 md:justify-between bt-1">
-    <div class="nav__links nav__home text-center">
+    <div class="nav__links nav__home text-center ml-10">
       <a class="hover:border-b-2 ease-in" href="/">Kit Components</a>
     </div>
     <div class="nav__container">
@@ -29,7 +29,7 @@
         </ul>
       </nav>
     </div>
-    <div class="nav__links  text-center">
+    <div class="nav__links  text-center mr-10">
       <a class="hover:border-b-2 ease-in" href="/About">Byron Tito</a>
     </div>
   </div>
