--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -6,9 +6,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="About">
   <!--! ------------Titulo ABOUT -------------- -->
   <div class="flex justify-center">
-    <div class="inline-block w-auto px-auto">
-      <h1 class="w-full text-7xl lg:text-9xl text-center">Bienvenido</h1>
-    </div>
+      <h1 class=" text-7xl lg:text-9xl ">Bienvenido</h1>
   </div>
   <!-- ------------Titulo ABOUT -------------- FIN -->
   <!--! ------------Info  -------------- -->
