Prueba borrando todo el contenido de about

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -5,12 +5,12 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="About">
   <!--! ------------Titulo ABOUT -------------- -->
-  <div class="flex justify-center">
+  <!-- <div class="flex justify-center">
       <h1 class=" text-7xl lg:text-9xl ">Bienvenido</h1>
-  </div>
+  </div> -->
   <!-- ------------Titulo ABOUT -------------- FIN -->
   <!--! ------------Info  -------------- -->
-  <div class="w-full grid lg:grid-cols-2 grid-cols-1">
+  <!-- <div class="w-full grid lg:grid-cols-2 grid-cols-1">
     <div class="border-2 rounded-3xl w-auto shadow-2xl h-auto lg:m-20 m-5">
       <div class="m-10">
         <h2 class="lg:text-5xl text-3xl mb-10">Hola <br /> Soy Byron</h2>
@@ -30,10 +30,10 @@ import Layout from "../layouts/Layout.astro";
       </div>
   </div>
   
-  </div>
+  </div> -->
   <!-- ------------Info  -------------- FIN -->
   <!--! ------------Mansory  -------------- -->
-  <div class="mansory__container grid lg:grid-cols-3fr-5fr lg:mx-10 m-5">
+  <!-- <div class="mansory__container grid lg:grid-cols-3fr-5fr lg:mx-10 m-5">
     <h2 class="text-5xl m-10 self-center text-center lg:text-left">
       Las tecnologías que uso
     </h2>
@@ -63,14 +63,14 @@ import Layout from "../layouts/Layout.astro";
         <p class="text-6xl">Astro</p>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- ------------Mansory  -------------- FIN -->
   <!--! -------------Hobbies----------------- -->
-  <Hobbies />
+  <!-- <Hobbies /> -->
   <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
-<style>
+<!-- <style>
   h1 {
     background: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
     -webkit-background-clip: text;
@@ -143,4 +143,4 @@ import Layout from "../layouts/Layout.astro";
   }
 
  
-</style>
+</style> -->
