Add style about

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -70,7 +70,7 @@ import Layout from "../layouts/Layout.astro";
   <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
-<!-- <style>
+<style>
   h1 {
     background: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
     -webkit-background-clip: text;
@@ -143,4 +143,4 @@ import Layout from "../layouts/Layout.astro";
   }
 
  
-</style> -->
+</style>
