--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -66,7 +66,7 @@ import Layout from "../layouts/Layout.astro";
   </div>
   <!-- ------------Mansory  -------------- FIN -->
   <!--! -------------Hobbies----------------- -->
-  <Hobbies />
+  <!-- <Hobbies /> -->
   <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
