--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -66,11 +66,11 @@ import Layout from "../layouts/Layout.astro";
   </div>
   <!-- ------------Mansory  -------------- FIN -->
   <!--! -------------Hobbies----------------- -->
-  <!-- <Hobbies /> -->
+  <Hobbies />
   <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
-<style>
+<!-- <style>
   h1 {
     background: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
     -webkit-background-clip: text;
@@ -140,7 +140,7 @@ import Layout from "../layouts/Layout.astro";
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-  }
+  } -->
 
  
 </style>
