--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,6 +1,8 @@
 ---
 import Hobbies from "../components/About/Hobbies.astro";
 import Layout from "../layouts/Layout.astro";
+import { getCollection } from "astro:content";
+const allHobbies = await getCollection('hobbies');
 ---
 
 <Layout title="About">
@@ -66,12 +68,38 @@ import Layout from "../layouts/Layout.astro";
   </div>
   <!-- ------------Mansory  -------------- FIN -->
   <!--! -------------Hobbies----------------- -->
-  <Hobbies />
+  <!-- <Hobbies /> -->
+  <div class="container shadow-2xl w-5/6 mx-auto my-20 rounded-2xl overflow-hidden">
+    <div class=" flex lg:flex-row flex-col">
+      {
+        allHobbies.map((hobby, index) => (
+          <div  class={`color bg-hc${index + 1} flex place-items-center text-white font-bold 
+          h-80 flex-1 hover:flex-3 duration-100`}>
+            <h3 class="mx-auto text-center">{hobby.data.title} </h3>
+            <div class="info__hobbies left-0 top-0 right-0 bottom-0 m-14 z-10 absolute opacity-0">
+              <h4 class="text-3xl text-black text-center my-5">{hobby.data.title} </h4>
+              <ul>
+                {hobby.data.hobbies.map((singleHobby) => (
+                  <li>{singleHobby}</li>
+                ))}
+              </ul>
+            </div>
+          </div>
+        ))
+      }
+    </div>
+    <div id="stats" class="h-auto w-full bg-white flex items-center justify-between px-3">
+      <span class="text-3xl m-2 text-gray-400">Hobbies</span>
+      <svg class="fill-gray-400" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 18 18">
+        <path d="M4 7.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5S5.5 9.83 5.5 9 4.83 7.5 4 7.5zm10 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5zm-5 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5S9.83 7.5 9 7.5z"></path>
+      </svg>
+    </div>
+  </div>
   <!--! -------------Hobbies-----------------FIN -->
 </Layout>
 
-<!-- <style>
-  h1 {
+<style>
+  /* h1 {
     background: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -140,7 +168,30 @@ import Layout from "../layouts/Layout.astro";
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-  } -->
+  } */
+  .color {
+    position: relative;
+    overflow: hidden;
+    transition: flex 100ms ease-in-out;
+  }
 
+  bg-hc1{}
+  bg-hc2{}
+  bg-hc3{}
+  bg-hc4{}
+  bg-hc5{}
+ 
+  .color:hover h3 {
+    display: none;
+  }
+
+  .info__hobbies {
+    transition: opacity 0s ease-out;
+  }
+
+  .color:hover .info__hobbies {
+    opacity: 1;
+    transition: opacity 0.5s ease-in;
+  }
  
 </style>
