--- a/src/components/CardsInCards.astro
+++ b/src/components/CardsInCards.astro
@@ -1,9 +1,43 @@
-<div class="cards__container m-10">
-    <div class=" relative w-64 h-64">
-        <div class="absolute translate-x-6 w-64 h-64 border-4 border-black rounded-xl bg-red-400" style="z-index: 4;"></div>
-        <div class="absolute translate-x-4 w-64 h-64 border-4 border-black rounded-xl bg-green-400" style="z-index: 3;"></div>
-        <div class="absolute translate-x-2 w-64 h-64 border-4 border-black rounded-xl bg-blue-400" style="z-index: 2;"></div>
-        <div class="absolute  w-64 h-64 border-4 border-black rounded-xl bg-violet-400" style="z-index: 1;"></div>
+<div class="cards__container ">
+  <div class="cards__rotate relative w-64 h-64 ml-20">
+    <div
+      class="card card-1 absolute z-40 ml-20 w-28 h-28 border border-black rounded-xl bg-red-400 flex justify-center items-center">
+      <p class="text-3xl">😎</p>
     </div>
-    
+    <div
+      class="card card-2 absolute z-30 ml-32 w-28 h-28 border border-black rounded-xl bg-green-400 flex justify-center items-center">
+      <p class="text-3xl">😍</p>
+    </div>
+    <div
+      class="card card-3 absolute z-20 ml-8 w-28 h-28 border border-black rounded-xl bg-blue-400 flex justify-center items-center">
+      <p class="text-3xl">😂</p>
+    </div>
+    <div
+      class="card card-4 absolute z-10 ml-20 w-28 h-28 border border-black rounded-xl bg-violet-400 flex justify-center items-center">
+      <p class="text-3xl">😜</p>
+    </div>
+  </div>
 </div>
+
+<style>
+  .card {
+    transition: transform 300ms ease-in-out;
+    /* transform-origin: bottom left; */
+  }
+
+  .cards__rotate:hover .card-4 {
+    transform: rotate(-131deg) translateY(-35px);
+  }
+
+  .cards__rotate:hover .card-3 {
+    transform: rotate(-40deg) translateX(0px) translateY(-100px);
+    
+  }
+
+  .cards__rotate:hover .card-2 {
+    transform: rotate(50deg) translateY(-55px) translateX(8px);
+  }
+  .cards__rotate:hover .card-1 {
+      transform: rotate(50deg) translateX(-90px) translateY(-90px);
+  }
+</style>
