Agregado nuevas partes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import CardsInsCards from "../components/CardsInCards.astro";
 import NavbarsInNavbars from "../components/navbarsInNavbars.astro";
+import Prueba from "../components/codeExample.astro";
 ---
 
 <Layout title="Kit Components" transition:animate="fade">
@@ -11,5 +12,6 @@ import NavbarsInNavbars from "../components/navbarsInNavbars.astro";
     <CardsInsCards  />
     <NavbarsInNavbars />
   </div>
+  <Prueba/>
   
 </Layout>
