--- a/src/components/CardsInCards.astro
+++ b/src/components/CardsInCards.astro
@@ -1,19 +1,20 @@
 <div class="cards__container ">
-  <div class="cards__rotate relative w-64 h-64 ml-20">
+  <div class="cards__rotate ml-28">
     <div
-      class="card card-1 absolute z-40 ml-20 w-28 h-28 border border-black rounded-xl bg-red-400 flex justify-center items-center">
+      class="card card-1 absolute z-40 ml-20 w-36 h-36 rounded-xl bg-red-400 flex justify-center items-center">
       <p class="text-3xl">😎</p>
+
     </div>
     <div
-      class="card card-2 absolute z-30 ml-32 w-28 h-28 border border-black rounded-xl bg-green-400 flex justify-center items-center">
+      class="card card-2 absolute z-30 ml-32 w-36 h-36 rounded-xl bg-green-400 flex justify-center items-center">
       <p class="text-3xl">😍</p>
-    </div>
+          </div>
     <div
-      class="card card-3 absolute z-20 ml-8 w-28 h-28 border border-black rounded-xl bg-blue-400 flex justify-center items-center">
+      class="card card-3 absolute z-20 ml-8 w-36 h-36 rounded-xl bg-blue-400 flex justify-center items-center">
       <p class="text-3xl">😂</p>
     </div>
     <div
-      class="card card-4 absolute z-10 ml-20 w-28 h-28 border border-black rounded-xl bg-violet-400 flex justify-center items-center">
+      class="card card-4 absolute z-10 ml-20 w-36 h-36 rounded-xl bg-violet-400 flex justify-center items-center">
       <p class="text-3xl">😜</p>
     </div>
   </div>
@@ -25,12 +26,24 @@
     /* transform-origin: bottom left; */
   }
 
+  .card-1{
+    background:conic-gradient(at right top, rgb(239, 68, 68), rgb(34, 197, 94));
+  }
+  .card-2{
+    background: conic-gradient(at left top, rgb(101, 163, 13), rgb(253, 224, 71), rgb(220, 38, 38));
+  }
+  .card-3{
+    background: linear-gradient(to right, rgb(15, 23, 42), rgb(88, 28, 135), rgb(15, 23, 42));
+  }
+  .card-4{
+    background: linear-gradient(to right, rgb(56, 189, 248), rgb(251, 113, 133), rgb(163, 230, 53));
+  }
   .cards__rotate:hover .card-4 {
-    transform: rotate(-131deg) translateY(-35px);
+    transform: rotate(-131deg) translateY(-70px) translateX(30px)
   }
 
   .cards__rotate:hover .card-3 {
-    transform: rotate(-40deg) translateX(0px) translateY(-100px);
+    transform: rotate(-40deg) translateX(-30px) translateY(-160px);
     
   }
 
@@ -38,6 +51,6 @@
     transform: rotate(50deg) translateY(-55px) translateX(8px);
   }
   .cards__rotate:hover .card-1 {
-      transform: rotate(50deg) translateX(-90px) translateY(-90px);
+      transform: rotate(50deg) translateX(-120px) translateY(-90px);
   }
 </style>
