--- a/src/components/navbarsInNavbars.astro
+++ b/src/components/navbarsInNavbars.astro
@@ -1,8 +1,8 @@
-<div class="cards__container  m-10">
-    <div class="cards__rotate relative  h-64 ">
+<div class="navbars__container ">
+    <div class="cards__rotate relative mt-6 mb-52 ">
       <div
-        class="card card-1 absolute z-40 mt-24 w-full h-14 border border-black rounded-xl bg-red-400 ">    
-            <ul class="flex place-content-evenly items-center h-full">
+        class="card card-1 mt-5 absolute z-40  w-full  rounded-xl ">    
+            <ul class="flex place-content-evenly items-center h-full ">
                 <li>😎</li>
                 <li>Inicio</li>
                 <li>Contacto</li>
@@ -12,8 +12,8 @@
         
       </div>
       <div
-        class="card card-2 absolute z-30 mt-28 w-full h-14 border border-black rounded-xl bg-green-400 ">
-        <ul class="flex place-content-evenly items-center h-full">
+        class="card card-2  absolute z-30 w-full  rounded-xl  ">
+        <ul class="flex place-content-evenly items-center h-full text-purple-900">
             <li>😍</li>
             <li>Inicio</li>
             <li>Contacto</li>
@@ -22,8 +22,8 @@
         </ul>
       </div>
       <div
-        class="card card-3 absolute z-20 mt-20 w-full h-14 border border-black rounded-xl bg-blue-400 ">
-        <ul class="flex place-content-evenly items-center h-full">
+        class="card card-3 mt-9 absolute z-20 w-full  rounded-xl  x">
+        <ul class="flex place-content-evenly items-center h-full text-white">
             <li>😂</li>
             <li>Inicio</li>
             <li>Contacto</li>
@@ -32,8 +32,8 @@
         </ul>
       </div>
       <div
-        class="card card-4 absolute z-10 mt-24 w-full h-14 border border-black rounded-xl bg-violet-400 ">
-        <ul class="flex place-content-evenly items-center h-full">
+        class="card card-4 absolute z-10  w-full  rounded-xl  ">
+        <ul class="flex place-content-evenly items-center h-full text-pink-950">
             <li>😜</li>
             <li>Inicio</li>
             <li>Contacto</li>
@@ -48,21 +48,36 @@
     .card {
       transition: transform 300ms ease-in-out;
       transform-origin: bottom left;
+      height: 50px;
     }
   
+      .card-1{
+        background: linear-gradient(to right, rgb(187, 247, 208), rgb(74, 222, 128), rgb(126, 34, 206));
+      }
+      .card-2{
+        background: linear-gradient(to right, rgb(236, 72, 153), rgb(239, 68, 68), rgb(234, 179, 8));
+        /* margin-bottom: 100px; */
+
+      }
+      .card-3{
+        background: linear-gradient(to right, rgb(55, 65, 81), rgb(17, 24, 39), rgb(0, 0, 0));
+      }
+      .card-4{
+        background:linear-gradient(to right, rgb(101, 163, 13), rgb(253, 224, 71), rgb(220, 38, 38));
+      }
     .cards__rotate:hover .card-4 {
       transform: translateY(-90px);
     }
   
     .cards__rotate:hover .card-3 {
-        transform: translateY(-10px);
+        transform: translateY(-65px);
     }
   
     .cards__rotate:hover .card-2 {
-        transform: translateY(20px);
+        transform: translateY(30px);
     }
     .cards__rotate:hover .card-1 {
-        transform: translateY(100px);
+        transform: translateY(70px);
         /* margin-top: 0; */
     }
   </style>
