--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -2,6 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Mixblend from "../components/Cards/mixblend.astro";
 import SimpleCard from "../components/Cards/simpleCard.astro";
+import Order from "../components/Cards/order.astro";
 
 ---
 
@@ -15,5 +16,6 @@ import SimpleCard from "../components/Cards/simpleCard.astro";
 
     <Mixblend/>
     <SimpleCard/>
+    <Order/>
   </div>
 </Layout>
