--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -2,7 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import Mixblend from "../components/Cards/mixblend.astro";
 import SimpleCard from "../components/Cards/simpleCard.astro";
-import Order from "../components/Cards/order.astro";
+import Order1 from "../components/Cards/order1.astro";
+import Order2 from "../components/Cards/order2.astro";
 
 ---
 
@@ -12,10 +13,10 @@ import Order from "../components/Cards/order.astro";
       <h1 class="w-full text-7xl lg:text-6xl text-center">Seccion de cards</h1>
     </div>
   </div>
-  <div class="flex">
-
+  <div class="grid grid-cols-3 gap-10">
     <Mixblend/>
     <SimpleCard/>
-    <Order/>
+    <Order1/>
+    <Order2/>
   </div>
 </Layout>
