Add cards de orders

--- a/src/components/Cards/order4.astro
+++ b/src/components/Cards/order4.astro
@@ -1,12 +1,13 @@
-<div class="w-96 h-52  my-10 grid items-center justify-center">
-  <div class="border rounded-2xl p-1 w-96 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300">
-    <div class="bordecito h-auto my-1 w-2 bg-green-500 rounded-3xl mx-1  "></div>
+<div class="w-96 h-52 my-10 grid items-center justify-center">
+  <div
+    class="bordecito border rounded-2xl border-l-blue-800 p-1 w-96 h-auto grid-flow-col grid duration-300"
+  >
     <div class="grid items-center justify-center">
-      <h2>001428 Byron Vladimir Tito Sandoval</h2>
+      <h2 class="text-lg">001428 Byron Vladimir Tito </h2>
     </div>
-    <div>
+    <div class=" grid justify-end">
       <svg
-        class="w-14 h-14  dark:text-white"
+        class="w-14 h-14 dark:text-white right-0"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -24,3 +25,9 @@
     </div>
   </div>
 </div>
+
+<style>
+  .bordecito {
+    border-left: 12px solid orange;
+  }
+</style>
