--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -4,6 +4,12 @@ import Mixblend from "../components/Cards/mixblend.astro";
 import SimpleCard from "../components/Cards/simpleCard.astro";
 import Order1 from "../components/Cards/order1.astro";
 import Order2 from "../components/Cards/order2.astro";
+import Order3 from "../components/Cards/order3.astro";
+import Order4 from "../components/Cards/order4.astro";
+import Order5 from "../components/Cards/order5.astro";
+import Order6 from "../components/Cards/order6.astro";
+import Order7 from "../components/Cards/order7.astro";
+import Order8 from "../components/Cards/order8.astro";
 
 ---
 
@@ -18,5 +24,11 @@ import Order2 from "../components/Cards/order2.astro";
     <SimpleCard/>
     <Order1/>
     <Order2/>
+    <Order3/>
+    <Order4/>
+    <Order5/>
+    <Order6/>
+    <Order7/>
+    <Order8/>
   </div>
 </Layout>
