--- a/src/components/Cards/order8.astro
+++ b/src/components/Cards/order8.astro
@@ -1,10 +1,10 @@
 <div class="w-96 h-52 my-10 grid items-center justify-center">
   <div
-    class="border rounded-2xl p-1 w-96 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 w-96 h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
   >
-    <div class=" grid grid-flow-row h-20 justify-center items-center">
+    <div class="grid h-20 justify-center items-center">
       <svg
-        class="w-10 h-10 text-gray-800 border-b-2 pb-1 border-gray-400 dark:text-white"
+        class="w-12 h-12 text-gray-800 dark:text-white"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
@@ -20,13 +20,17 @@
           d="M16 12h4m-2 2v-4M4 18v-1a3 3 0 0 1 3-3h4a3 3 0 0 1 3 3v1a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1Zm8-10a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
         ></path>
       </svg>
-      <div class="  bordecito h-5   w-5 m-auto bg-green-500 rounded-3xl "></div>
+      
     </div>
+    <div class="justify-center items-center grid">
+        <div class="bordecito h-9 w-9 bg-green-500 rounded-3xl p-1"></div>
+      </div>
     <div class="grid items-center justify-center text-lg">
-        <div>
-            <h2>001428 Byron Vladimir Tito Sandoval</h2>
-            <p class="text-gray-400" >TKS - 6666</p>
-        </div>
-        </div>
+      <div>
+        <h2>001428 Byron Vladimir Tito </h2>
+        <p class="text-gray-400">TKS - 6666</p>
+      </div>
+    </div>
+   
   </div>
 </div>
