--- a/src/components/CardsInCards.astro
+++ b/src/components/CardsInCards.astro
@@ -1,5 +1,5 @@
 <div class="cards__container ">
-  <div class="cards__rotate ml-28">
+  <div class="cards__rotate ml-16 lg:ml-28">
     <div
       class="card card-1 absolute z-40 ml-20 w-36 h-36 rounded-xl bg-red-400 flex justify-center items-center">
       <p class="text-3xl">😎</p>
