--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 <div class="hero__container w-full h-full ">
   <div class="flex justify-center my-44">
     <div class="inline-block">
-      <h1 class="title__hero text-8xl">Kit Components</h1>
+      <h1 class="title__hero  text-center text-5xl lg:text-8xl">Kit Components</h1>
       <p class="sutitle text-center text-2xl mt-8">Coleccion de componentes</p>
       <div class="flex gap-6 mt-2 justify-center">
         <p class="text-center border-2 rounded-2xl border-red-600 px-5 py-1">
