--- a/src/components/codeExample.astro
+++ b/src/components/codeExample.astro
@@ -1,6 +1,6 @@
 <div class="box  w-10/12 h-full m-auto">
   <div class="content w-full h-full m-2">
-   <div class="border border-white w-ful h-full m-10 rounded-3xl bg-gray-950">
+   <div class="border border-white w-ful h-full lg:m-10 m-4 rounded-3xl bg-gray-950">
     <div class="border-b-2  flex gap-3 p-3">
       <div class="flex ml-8 gap-3 justify-center items-center">
         <div class="span-1 h-4 w-4 bg-yellow-500 rounded-full"></div>
@@ -11,7 +11,8 @@
         <p class="text-xl">Terminal</p>
       </div>
     </div>
-    <div class="m-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia iure officia saepe. Quod, error quisquam? Neque modi soluta ratione obcaecati minus sunt aspernatur porro nihil ex dolores nam, debitis tempore! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos, illo, corrupti sit aliquid sunt aliquam explicabo hic maiores quisquam vel nemo eligendi nulla illum tempore. Facilis dolor iste odio.</div>
+    <div class="lg:hidden m-5 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia iure officia saepe. Quod, error quisquam? Neque modi soluta ratione obcaecati minus sunt aspernatur porro nihil ex dolores nam, debitis tempore! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos, illo.</div>
+    <div class="lg:m-10 hidden lg:block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia iure officia saepe. Quod, error quisquam? Neque modi soluta ratione obcaecati minus sunt aspernatur porro nihil ex dolores nam, debitis tempore! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eos, illo, corrupti sit aliquid sunt aliquam explicabo hic maiores quisquam vel nemo eligendi nulla illum tempore. Facilis dolor iste odio.</div>
    </div>
     
   </div>
