--- a/src/components/navbarsInNavbars.astro
+++ b/src/components/navbarsInNavbars.astro
@@ -1,4 +1,4 @@
-<div class="navbars__container ">
+<div class="navbars__container mt-60 lg:mt-0 mx-4 lg:mx-0">
     <div class="cards__rotate relative mt-6 mb-52 ">
       <div
         class="card card-1 mt-5 absolute z-40  w-full  rounded-xl ">    
