--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Prueba from "../components/codeExample.astro";
 
 <Layout title="Kit Components" transition:animate="fade">
   <Hero />
-  <div class="grid grid-cols-2">
+  <div class="grid lg:grid-cols-2 ">
     <CardsInsCards  />
     <NavbarsInNavbars />
   </div>
