Responsive page Cards

--- a/src/components/Cards/order5.astro
+++ b/src/components/Cards/order5.astro
@@ -1,4 +1,4 @@
-<div class="w-96 h-52 grid items-center justify-center">
+<div class="w-96 h-52 grid items-center justify-center mx-auto">
   <div class="border h-28 rounded-2xl w-96 border-gray-400">
     <div class="mt-5 text-center">
       <h2 class="text-xl">001428 Byron Vladimir Tito Sandoval</h2>
