--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,4 +1,4 @@
-<div class="w-96 h-52 grid items-center justify-center">
+<div class="w-96 h-52 grid items-center justify-center mx-auto">
   <div class="bordecito h-24 rounded-2xl w-96 overflow-hidden">
     <div class="flex justify-evenly items-center mt-4">
       <div>
