--- a/src/components/Cards/mixblend.astro
+++ b/src/components/Cards/mixblend.astro
@@ -1,4 +1,4 @@
-<div class="m-10 h-96 w-96">
+<div class="lg:m-10 h-96 w-96 mx-auto mt-10">
   <div class="relative h-96 flex items-center justify-center">
     <img
       class="blur-2xl h-96"
