--- a/src/components/Cards/order1.astro
+++ b/src/components/Cards/order1.astro
@@ -1,4 +1,4 @@
-<div class="w-96 h-52  my-10 grid items-center justify-center">
+<div class="w-96 h-52  lg:my-10 grid items-center justify-center mx-auto">
   <div class="border rounded-2xl p-1 w-96 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300">
     <div class="bordecito h-auto my-1 w-2 bg-green-500 rounded-3xl mx-1  "></div>
     <div class="grid items-center justify-center">
