--- a/src/components/Cards/order4.astro
+++ b/src/components/Cards/order4.astro
@@ -1,4 +1,4 @@
-<div class="w-96 h-52 my-10 grid items-center justify-center">
+<div class="w-96 h-52 my-10 grid items-center justify-center mx-auto">
   <div
     class="bordecito border rounded-2xl border-l-blue-800 p-1 w-96 h-auto grid-flow-col grid duration-300"
   >
