--- a/src/components/Cards/order8.astro
+++ b/src/components/Cards/order8.astro
@@ -1,4 +1,4 @@
-<div class="w-96 h-52 my-10 grid items-center justify-center">
+<div class="w-96 h-52 my-10 grid items-center justify-center mx-auto">
   <div
     class="border rounded-2xl p-1 w-96 h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
   >
