--- a/src/components/Cards/simpleCard.astro
+++ b/src/components/Cards/simpleCard.astro
@@ -1,4 +1,4 @@
-<div class="border p-5  rounded-xl h-96 w-96 m-10 bg-gray-100">
+<div class="border p-5  rounded-xl h-96 w-96 lg:m-10 mx-auto mt-14 bg-gray-100">
     <div class=" fondo_card mt-8 w-9/12 h-1/2 m-auto rounded-xl hover:scale-125 duration-100 "></div>
     <div class="mt-10">
         <h3 class="text-3xl mb-5">Filadeldfia</h3>
