--- a/src/components/Navbars/blurEfect.astro
+++ b/src/components/Navbars/blurEfect.astro
@@ -1,8 +1,8 @@
-<div class="blur__container bg-fondo bg-center bg-cover h-40 border rounded-3xl flex items-center text-white text-xl">
-    <div class="blur__navbar flex justify-between w-full m-10 p-5 border rounded-xl backdrop-blur-xl  ">
-        <div class="logo">🎃</div>
+<div class="blur__container bg-fondo bg-center bg-cover mt-20 h-56 lg:h-40 border rounded-3xl flex items-center text-white text-xl">
+    <div class="blur__navbar flex justify-evenly lg:justify-between w-full  m-5 lg:m-10 lg:p-5 border rounded-xl backdrop-blur-xl  ">
+        <div class="logo grid items-center ">🎃</div>
         <div class="menu">
-            <ul class="flex gap-10 ">
+            <ul class="flex flex-col lg:flex-row lg:gap-10 ">
                 <li class="hover: backdrop-blur-2xl"><a href="">Inicio</a></li>
                 <li><a href="">Sobre Nosotros</a></li>
                 <li><a href="">Promociones</a></li>
@@ -10,7 +10,7 @@
                 <li class="hover:bg-black"><a href="">Contacto</a></li>
             </ul>
         </div>
-        <div class="profile">Profile</div>
+        <div class="profile items-center grid">Profile</div>
     </div>
 </div>
 
