--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -10,7 +10,7 @@ const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 
 <Layout title="Tags">
   <h2 class="text-3xl text-center mt-5">Lista de Tags</h2>
-  <div class="tags__container max-w-screen-xl mx-auto">
+  <div class="tags__container max-w-screen-xl mx-auto grid lg:grid-cols-3 grid-cols-1">
     {
       tags.map((tag) => (
         <p class="tag shadow-xl">
@@ -47,8 +47,8 @@ const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
   .tags__container {
     margin-top: 40px;
     margin-bottom: 40px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* display: grid; */
+    /* grid-template-columns: repeat(3, 1fr); */
     place-items: center;
     row-gap: 60px;
   }
