--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@ body {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
+  background-color: #039444;
 }
 @media screen and (min-width: 636px) {
   .hamburger {
