--- a/src/components/Cards/simpleCard.astro
+++ b/src/components/Cards/simpleCard.astro
@@ -1,13 +1,24 @@
-<div class="border p-5  rounded-xl h-96 w-96 lg:m-10 mx-auto mt-14 bg-gray-100">
-    <div class=" fondo_card mt-8 w-9/12 h-1/2 m-auto rounded-xl hover:scale-125 duration-100 "></div>
-    <div class="mt-10">
-        <h3 class="text-3xl mb-5">Filadeldfia</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, quas.</p>
-    </div>
+<div class="border lg:p-5 rounded-xl h-96 w-96  lg:m-10 mx-auto mt-14 bg-gray-100">
+  <div
+    class="fondo_card mt-8 w-9/12 h-1/2 m-auto rounded-xl hover:scale-125 duration-100"
+  >
+  </div>
+  <div class="mt-10">
+    <h3 class="text-3xl mb-5">Filadeldfia</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, quas.
+    </p>
+  </div>
 </div>
 
 <style>
-    .fondo_card{
-        background-image: linear-gradient( 109.6deg,  rgba(112,246,255,0.33) 11.2%, rgba(221,108,241,0.26) 42%, rgba(229,106,253,0.71) 71.5%, rgba(123,183,253,1) 100.2% );
-    }
+  .fondo_card {
+    background-image: linear-gradient(
+      109.6deg,
+      rgba(112, 246, 255, 0.33) 11.2%,
+      rgba(221, 108, 241, 0.26) 42%,
+      rgba(229, 106, 253, 0.71) 71.5%,
+      rgba(123, 183, 253, 1) 100.2%
+    );
+  }
 </style>
