--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -5,7 +5,7 @@ import { getCollection } from "astro:content";
 const allHobbies = await getCollection('hobbies');
 ---
 
-<Layout title="About">
+<Layout title="Kit Components | About">
   <!--! ------------Titulo ABOUT -------------- -->
   <div class="flex justify-center">
       <h1 class=" text-7xl lg:text-9xl ">Bienvenido</h1>
