--- a/src/pages/Navbars.astro
+++ b/src/pages/Navbars.astro
@@ -4,6 +4,7 @@ import BlurEfect from "../components/Navbars/blurEfect.astro";
 
 ---
 
-<Layout title="Navbars">
+<Layout title="Kit Components | Navbars">
+  <h1 class="text-6xl text-center">Seccion de NavBars</h1>
   <BlurEfect/>
 </Layout>
