--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Hero from "../components/Hero.astro";
 import CardsInsCards from "../components/CardsInCards.astro";
 import NavbarsInNavbars from "../components/navbarsInNavbars.astro";
 import Prueba from "../components/codeExample.astro";
+import Order8 from "../components/Cards/order8.astro";
+
 ---
 
 <Layout title="Kit Components" transition:animate="fade">
@@ -13,5 +15,7 @@ import Prueba from "../components/codeExample.astro";
     <NavbarsInNavbars />
   </div>
   <Prueba/>
+  <Order8/>
+
   
 </Layout>
