--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -25,6 +25,10 @@
             class="nav__tags py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
             <a href="/tags">Tags()</a>
           </li>
+          <li
+            class="nav__tags py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
+            <a href="/webPage">Pages</a>
+          </li>
         </ul>
       </nav>
     </div>
