--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -13,13 +13,13 @@ import Order8 from "../components/Cards/order8.astro";
 
 ---
 
-<Layout title="Cards">
+<Layout title="Kit Components | Cards">
   <div class="flex justify-center">
     <div class="inline-block w-auto px-auto">
-      <h1 class="w-full text-6xl lg:text-6xl text-center">Seccion de cards</h1>
+      <h1 class="w-full text-6xl lg:text-6xl text-center">Seccion de Cards</h1>
     </div>
   </div>
-  <div class="grid grid-cols-1 lg:grid-cols-3 lg:gap-10">
+  <div class="grid  lg:grid-cols-3 ">
     <Mixblend/>
     <SimpleCard/>
     <Order1/>
