--- a/src/pages/Footers.astro
+++ b/src/pages/Footers.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro"
 ---
 
-<Layout title="Footers">
+<Layout title="Kit Components | Footers">
   
 </Layout>
