--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -8,7 +8,7 @@ const allPosts = await getCollection("posts");
 const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 ---
 
-<Layout title="Tags">
+<Layout title="Kit Components |   Tags">
   <h2 class="text-3xl text-center mt-5">Lista de Tags</h2>
   <div class="tags__container max-w-screen-xl mx-auto grid lg:grid-cols-3 grid-cols-1">
     {
