--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -14,12 +14,12 @@ import Order8 from "../components/Cards/order8.astro";
 ---
 
 <Layout title="Kit Components | Cards">
-  <div class="flex justify-center">
+  <!-- <div class="flex justify-center">
     <div class="inline-block w-auto px-auto">
       <h1 class="w-full text-6xl lg:text-6xl text-center">Seccion de Cards</h1>
     </div>
   </div>
-  <div class="grid  lg:grid-cols-3 ">
+  <div class="grid lg:grid-cols-3 ">
     <Mixblend/>
     <SimpleCard/>
     <Order1/>
@@ -30,5 +30,5 @@ import Order8 from "../components/Cards/order8.astro";
     <Order6/>
     <Order7/>
     <Order8/>
-  </div>
+  </div> -->
 </Layout>
