--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -19,8 +19,8 @@ import Order8 from "../components/Cards/order8.astro";
       <h1 class="w-full text-6xl lg:text-6xl text-center">Seccion de Cards</h1>
     </div>
   </div>
-  <!-- <div class="grid lg:grid-cols-3 ">
-    <Mixblend/>
+  <div class="grid lg:grid-cols-3 ">
+    <!-- <Mixblend/>
     <SimpleCard/>
     <Order1/>
     <Order2/>
@@ -29,6 +29,6 @@ import Order8 from "../components/Cards/order8.astro";
     <Order5/>
     <Order6/>
     <Order7/>
-    <Order8/>
-  </div> -->
+    <Order8/> -->
+  </div>
 </Layout>
