--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,5 +1,5 @@
-<div class="w-96 h-52 grid items-center justify-center mx-auto">
-  <div class="bordecito h-24 rounded-2xl w-96 overflow-hidden">
+<div class="lg:w-96 w-11/12 h-52 grid items-center justify-center mx-auto">
+  <div class="bordecito h-24 rounded-2xl lg:w-96 w-11/12 overflow-hidden">
     <div class="flex justify-evenly items-center mt-4">
       <div>
         <h2 class="text-lg">001248 Byron Vladimir Tito Sandoval</h2>
