--- a/src/components/Cards/order3.astro
+++ b/src/components/Cards/order3.astro
@@ -1,6 +1,6 @@
-<div class="w-96 h-52 my-10 grid items-center justify-center mx-auto">
+<div class="lg:w-96 w-11/12 h-52 my-10 grid items-center justify-center mx-auto">
   <div
-    class="border rounded-2xl p-1 w-96 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 lg:w-96 w-11/12 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
   >
     <div class="grid  h-20 justify-center items-center">
       <svg
