--- a/src/components/Cards/order4.astro
+++ b/src/components/Cards/order4.astro
@@ -1,6 +1,6 @@
-<div class="w-96 h-52 my-10 grid items-center justify-center mx-auto">
+<div class="lg:w-96 w-11/12 h-52 my-10 grid items-center justify-center mx-auto">
   <div
-    class="bordecito border rounded-2xl border-l-blue-800 p-1 w-96 h-auto grid-flow-col grid duration-300"
+    class="bordecito border rounded-2xl border-l-blue-800 p-1 lg:w-96 w-11/12 h-auto grid-flow-col grid duration-300"
   >
     <div class="grid items-center justify-center">
       <h2 class="text-lg">001428 Byron Vladimir Tito </h2>
