--- a/src/pages/Cards.astro
+++ b/src/pages/Cards.astro
@@ -20,7 +20,7 @@ import Order8 from "../components/Cards/order8.astro";
     </div>
   </div>
   <div class="grid lg:grid-cols-3 ">
-    <!-- <Mixblend/>
+    <Mixblend/>
     <SimpleCard/>
     <Order1/>
     <Order2/>
@@ -29,6 +29,6 @@ import Order8 from "../components/Cards/order8.astro";
     <Order5/>
     <Order6/>
     <Order7/>
-    <Order8/> -->
+    <Order8/>
   </div>
 </Layout>
