--- a/src/components/Cards/order4.astro
+++ b/src/components/Cards/order4.astro
@@ -1,13 +1,13 @@
 <div class="lg:w-96 w-11/12 h-52 my-10 grid items-center justify-center mx-auto">
   <div
-    class="bordecito border rounded-2xl border-l-blue-800 p-1 lg:w-96 w-11/12 h-auto grid-flow-col grid duration-300"
+    class="bordecito border rounded-2xl border-l-blue-800 p-1lg:w-96 w-full h-auto grid-flow-col grid duration-300"
   >
     <div class="grid items-center justify-center">
       <h2 class="text-lg">001428 Byron Vladimir Tito </h2>
     </div>
     <div class=" grid justify-end">
       <svg
-        class="w-14 h-14 dark:text-white right-0"
+        class="w-14 h-14 text-black right-0"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
