--- a/src/components/Cards/order5.astro
+++ b/src/components/Cards/order5.astro
@@ -1,5 +1,5 @@
 <div class="lg:w-96 w-11/12 h-52 grid items-center justify-center mx-auto">
-  <div class="border h-28 rounded-2xl lg:w-96 w-11/12 border-gray-400">
+  <div class="border h-28 rounded-2xl lg:w-96 w-full border-gray-400">
     <div class="mt-5 text-center">
       <h2 class="text-xl">001428 Byron Vladimir Tito Sandoval</h2>
     </div>
@@ -7,7 +7,7 @@
     <div class="mt-2">
       <div class="flex justify-evenly">
         <svg
-          class="w-12 h-12 dark:text-white right-0"
+          class="w-12 h-12 text-black right-0"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
