--- a/src/components/Cards/order6.astro
+++ b/src/components/Cards/order6.astro
@@ -1,12 +1,12 @@
 <div class="lg:w-96 w-11/12 h-52 grid items-center justify-center mx-auto">
-    <div class=" flex justify-evenly items-center border-8 border-blue-600 h-24 rounded-2xl lg:w-96 w-11/12 ">
+    <div class=" flex justify-evenly items-center border-8 border-blue-600 h-24 rounded-2xl lg:w-96 w-full ">
         <div>
             <h2 class="text-lg">001248 Byron Vladimir Tito </h2>
             <p class="text-gray-400">TKS - 91919</p>
         </div>
         <div>
             <svg
-              class="w-14 h-14  dark:text-white"
+              class="w-14 h-14  text-black"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
               width="24"
