--- a/src/components/Cards/order1.astro
+++ b/src/components/Cards/order1.astro
@@ -1,12 +1,12 @@
 <div class="lg:w-96 w-11/12 h-52  lg:my-10 grid items-center justify-center mx-auto">
-  <div class="border rounded-2xl p-1 lg:w-96 w-11/12 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300">
+  <div class="border rounded-2xl p-1 lg:w-96 w-full h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300">
     <div class="bordecito h-auto my-1 w-2 bg-green-500 rounded-3xl mx-1  "></div>
     <div class="grid items-center justify-center">
       <h2>001428 Byron Vladimir Tito Sandoval</h2>
     </div>
     <div>
       <svg
-        class="w-14 h-14  dark:text-white"
+        class="w-14 h-14 text-black"
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
