--- a/src/components/Cards/order2.astro
+++ b/src/components/Cards/order2.astro
@@ -1,10 +1,10 @@
 <div class="lg:w-96 w-11/12 h-52 my-10 grid items-center justify-center mx-auto">
   <div
-    class="border rounded-2xl p-1 lg:w-96 w-11/12 h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 lg:w-96 w-full h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300"
   >
     <div class=" grid grid-flow-row h-20 justify-center items-center">
       <svg
-        class="w-10 h-10 text-gray-800 border-b-2 pb-1 border-gray-400 dark:text-white"
+        class="w-10 h-10 text-gray-800 border-b-2 pb-1 border-gray-400 "
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
