--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,5 +1,5 @@
 <div class="lg:w-96 w-11/12 h-52 grid items-center justify-center mx-auto">
-  <div class="bordecito h-24 rounded-2xl lg:w-96 w-11/12 overflow-hidden">
+  <div class="bordecito h-24 rounded-2xl lg:w-96 w-full overflow-hidden">
     <div class="flex justify-evenly items-center mt-4">
       <div>
         <h2 class="text-lg">001248 Byron Vladimir Tito Sandoval</h2>
@@ -7,7 +7,7 @@
       </div>
       <div>
         <svg
-          class="w-14 h-14 dark:text-white"
+          class="w-14 h-14 text-black"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
