--- a/src/components/Cards/order8.astro
+++ b/src/components/Cards/order8.astro
@@ -1,10 +1,10 @@
 <div class="lg:w-96 w-11/12 h-52 my-10 grid items-center justify-center mx-auto">
   <div
-    class="border rounded-2xl p-1 lg:w-96 w-11/12 h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 lg:w-96 w-full h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
   >
     <div class="grid h-20 justify-center items-center">
       <svg
-        class="w-12 h-12 text-gray-800 dark:text-white"
+        class="w-12 h-12 text-gray-800 "
         aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg"
         width="24"
