--- a/src/components/Cards/order2.astro
+++ b/src/components/Cards/order2.astro
@@ -22,7 +22,7 @@
       </svg>
       <div class="  bordecito h-5   w-5 m-auto bg-green-500 rounded-3xl "></div>
     </div>
-    <div class="grid items-center justify-center text-lg">
+    <div class="grid items-center justify-center text-lg ml-6">
         <div>
             <h2>001428 Byron Vladimir Tito Sandoval</h2>
             <p class="text-gray-400" >TKS - 6666</p>
