--- a/src/components/Cards/order6.astro
+++ b/src/components/Cards/order6.astro
@@ -1,4 +1,4 @@
-<div class="lg:w-96 w-11/12 h-52 grid items-center justify-center mx-auto">
+<div class="lg:w-96 w-full h-52 grid items-center justify-center mx-auto">
     <div class=" flex justify-evenly items-center border-8 border-blue-600 h-24 rounded-2xl lg:w-96 w-full ">
         <div>
             <h2 class="text-lg">001248 Byron Vladimir Tito </h2>
