--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,8 +1,8 @@
-<div class="lg:w-96 w-11/12 h-52 grid items-center justify-center mx-auto">
-  <div class="bordecito h-24 rounded-2xl lg:w-96 w-full overflow-hidden">
+<div class="lg:w-96 w-full h-52 grid items-center justify-center mx-auto">
+  <div class="bordecito h-24 rounded-2xl lg:w-96 w-full overflow-hidden ">
     <div class="flex justify-evenly items-center mt-4">
       <div>
-        <h2 class="text-lg">001248 Byron Vladimir Tito Sandoval</h2>
+        <h2 class="text-lg">001248 Byron Vladimir Tito  </h2>
         <p class="text-gray-400">TKS - 91919</p>
       </div>
       <div>
