Correccion de cards

--- a/src/components/Cards/order1.astro
+++ b/src/components/Cards/order1.astro
@@ -1,6 +1,5 @@
-<div class="lg:w-96 w-11/12 h-52  lg:my-10 grid items-center justify-center mx-auto">
-  <div class="border rounded-2xl p-1 lg:w-96 w-full h-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300">
-    <div class="bordecito h-auto my-1 w-2 bg-green-500 rounded-3xl mx-1  "></div>
+  <div class="border rounded-2xl p-1 lg:w-96 w-11/12 h-20 lg:m-auto my-16 mx-auto grid-flow-col grid border-gray-500 hover:bg-gray-100 duration-300">
+    <div class="bordecito  my-1 w-2 bg-green-500 rounded-3xl mx-1  "></div>
     <div class="grid items-center justify-center">
       <h2>001428 Byron Vladimir Tito Sandoval</h2>
     </div>
@@ -19,8 +18,8 @@
           stroke-linecap="round"
           stroke-linejoin="round"
           stroke-width="2"
-          d="M8 20V10m0 10-3-3m3 3 3-3m5-13v10m0-10 3 3m-3-3-3 3"></path>
+          d="M8 20V10m0 10-3-3m3 3 3-3m5-13v10m0-10 3 3m-3-3-3 3"
+        ></path>
       </svg>
     </div>
   </div>
-</div>
