--- a/src/components/Cards/order5.astro
+++ b/src/components/Cards/order5.astro
@@ -1,5 +1,4 @@
-<div class="lg:w-96 w-11/12 h-52   grid items-center justify-center mx-auto">
-  <div class="border h-36 rounded-2xl lg:w-96 w-full border-gray-400">
+  <div class="border h-32 my-16 rounded-2xl lg:w-96 w-11/12 mx-auto border-gray-400">
     <div class="mt-5 text-center">
       <h2 class="text-xl">001428 Byron Vladimir Tito Sandoval</h2>
     </div>
@@ -37,4 +36,3 @@
       </div>
     </div>
   </div>
-</div>
