--- a/src/components/Cards/order7.astro
+++ b/src/components/Cards/order7.astro
@@ -1,5 +1,4 @@
-<div class="lg:w-96 w-full h-52 grid items-center justify-center mx-auto">
-  <div class="bordecito h-24 rounded-2xl lg:w-96 w-full overflow-hidden ">
+  <div class="bordecito h-24 rounded-2xl lg:w-96 w-11/12 my-16 mx-auto overflow-hidden ">
     <div class="flex justify-evenly items-center mt-4">
       <div>
         <h2 class="text-lg">001248 Byron Vladimir Tito  </h2>
@@ -26,10 +25,8 @@
     </div>
     <div class="bg-orange-500 h-2 mt-4 "></div>
   </div>
-</div>
 <style>
   .bordecito {
     border: 1px solid rgba(0, 0, 0, 0.45);
-    /* border-bottom: 20px solid violet */
   }
 </style>
