--- a/src/components/Cards/mixblend.astro
+++ b/src/components/Cards/mixblend.astro
@@ -1,4 +1,4 @@
-<div class="lg:m-10 lg:w-96 w-11/12 h-96  mx-auto mt-10">
+<div class="lg:m-10 lg:w-96 w-full h-96   mt-10">
   <div class="relative h-96 flex items-center justify-center">
     <img
       class="blur-2xl h-96"
