--- a/src/components/Cards/order6.astro
+++ b/src/components/Cards/order6.astro
@@ -1,5 +1,4 @@
-<div class="lg:w-96 w-full h-52 grid items-center justify-center mx-auto">
-    <div class=" flex justify-evenly items-center border-8 border-blue-600 h-24 rounded-2xl lg:w-96 w-full ">
+    <div class=" flex justify-evenly items-center border-8 border-blue-600 h-24 my-16 rounded-2xl lg:w-96 w-11/12 mx-auto ">
         <div>
             <h2 class="text-lg">001248 Byron Vladimir Tito </h2>
             <p class="text-gray-400">TKS - 91919</p>
@@ -23,4 +22,3 @@
             </svg>
           </div>
     </div>
-</div>
