--- a/src/components/Cards/order8.astro
+++ b/src/components/Cards/order8.astro
@@ -1,6 +1,5 @@
-<div class="lg:w-96 w-full h-52 my-10 grid items-center justify-center mx-auto">
   <div
-    class="border rounded-2xl p-1 lg:w-96 w-full h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
+    class="border rounded-2xl p-1 lg:w-96 w-11/12 mx-auto my-16 h-auto grid-flow-col grid border-gray-300 hover:bg-gray-100 duration-300"
   >
     <div class="grid h-20 justify-center items-center">
       <svg
@@ -33,4 +32,3 @@
     </div>
    
   </div>
-</div>
