Add page order and plus :)

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -27,7 +27,7 @@
           </li>
           <li
             class="nav__tags py-1 px-2 nav__links hover:bg-gray-300 rounded-lg duration-500">
-            <a href="/webPage">Pages</a>
+            <a href="/WebPages">Pages</a>
           </li>
         </ul>
       </nav>
