--- a/src/components/WebPages/orderCard.astro
+++ b/src/components/WebPages/orderCard.astro
@@ -18,11 +18,11 @@
   </details>
 </div>
 
-<style>
+<!-- <style>
 details > div {
   transition: max-height 0.5s ease-in-out;
 }
 details[open] > div {
-  max-height: 1000px; /* Ajusta este valor según la cantidad de contenido */
+  max-height: 1000px; 
 }
-</style>
+</style> -->
