--- a/src/pages/WebPages/Control-de-ordenes.astro
+++ b/src/pages/WebPages/Control-de-ordenes.astro
@@ -3,11 +3,15 @@ import Layout from "../../layouts/Layout.astro";
 import OrderCard from "../../components/WebPages/orderCard.astro";
 import Acordion from "../../components/WebPages/acordion.astro";
 import Acordion1 from "../../components/WebPages/accordion1.astro";
+import Acordion2 from "../../components/WebPages/acordion2.astro";
 ---
 
 <Layout title="Kit Components | WebPages">
     <h1 class="text-6xl text-center mb-5 ">Control de ordenes diarias</h1>
     <OrderCard/>
-    <Acordion1/>
+    <OrderCard/>
+    <OrderCard/>
+    <!-- <Acordion1/>
+    <Acordion2/> -->
 
 </Layout>
