--- a/src/components/WebPages/accordion1.astro
+++ b/src/components/WebPages/accordion1.astro
@@ -1,65 +1,71 @@
 <!-- component -->
 <div class="m-2 space-y-2">
-    <div
-      class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-      tabindex="1"
-    >
-      <div class="flex cursor-pointer items-center justify-between">
-        <span> HTML </span>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-        />
+  <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="1">
+      <div class="flex cursor-pointer items-center justify-between toggle-trigger">
+          <span> HTML </span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+              class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
       </div>
-      <div
-        class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-      >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
+      <div class="toggle-content invisible h-auto max-h-0 items-center opacity-0 transition-all">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat.
       </div>
-    </div>
-  
-    <div
-      class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-      tabindex="2"
-    >
-      <div class="flex cursor-pointer items-center justify-between">
-        <span> CSS </span>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-        />
-      </div>
-      <div
-        class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-      >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
-      </div>
-    </div>
-  
-    <div
-      class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white"
-      tabindex="3"
-    >
-      <div class="flex cursor-pointer items-center justify-between">
-        <span> JAVASCRIPT </span>
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
-          class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180"
-        />
-      </div>
-      <div
-        class="invisible h-auto max-h-0 items-center opacity-0 transition-all group-focus:visible group-focus:max-h-screen group-focus:opacity-100 group-focus:duration-1000"
-      >
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-        commodo consequat.
-      </div>
-    </div>
   </div>
+
+  <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="2">
+      <div class="flex cursor-pointer items-center justify-between toggle-trigger">
+          <span> CSS </span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+              class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
+      </div>
+      <div class="toggle-content invisible h-auto max-h-0 items-center opacity-0 transition-all">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat.
+      </div>
+  </div>
+
+  <div class="group flex flex-col gap-2 rounded-lg bg-black p-5 text-white" tabindex="3">
+      <div class="flex cursor-pointer items-center justify-between toggle-trigger">
+          <span> JAVASCRIPT </span>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Chevron-icon-drop-down-menu-WHITE.png"
+              class="h-2 w-3 transition-all duration-500 group-focus:-rotate-180" />
+      </div>
+      <div class="toggle-content invisible h-auto max-h-0 items-center opacity-0 transition-all">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+          ea commodo consequat.
+      </div>
+  </div>
+</div>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+      const triggers: NodeListOf<HTMLElement> = document.querySelectorAll('.toggle-trigger');
+
+      triggers.forEach((trigger) => {
+          trigger.addEventListener('click', function () {
+              const content = this.nextElementSibling as HTMLElement;
+              const img = this.querySelector('img') as HTMLImageElement;
+
+              if (content.classList.contains('visible')) {
+                  content.classList.remove('visible', 'max-h-screen', 'opacity-100');
+                  content.classList.add('invisible', 'max-h-0', 'opacity-0');
+                  img.classList.remove('-rotate-180');
+              } else {
+                  content.classList.remove('invisible', 'max-h-0', 'opacity-0');
+                  content.classList.add('visible', 'max-h-screen', 'opacity-100');
+                  img.classList.add('-rotate-180');
+              }
+          });
+      });
+  });
+</script>
+
+<style>
+  .visible {
+      max-height: none;
+      opacity: 1 !important;
+  }
+</style>
