Prueba para cell

--- a/src/components/WebPages/orderCard.astro
+++ b/src/components/WebPages/orderCard.astro
@@ -1,12 +1,12 @@
-<div class="space-y-4 w-11/12 mx-auto rounded-xl overflow-hidden">
-  <details class="group border-s-8 border-green-500 bg-gray-200 duration-100 p-6 [&_summary::-webkit-details-marker]:hidden">
+<div class="orderCard space-y-4 w-11/12 mx-auto rounded-2xl overflow-hidden my-4  border-black border ">
+  <details class="group border-s-8 border-red-500 rounded-2xl bg-gray-100 duration-100 px-2 py-4 [&_summary::-webkit-details-marker]:hidden">
       <summary class="flex cursor-pointer items-center justify-between gap-1.5 duration-100">
-          <h2 class="text-lg font-medium  ">
+          <h2 class=" font-medium  ">
              001428 Byron Vladimir Tito Sandoval
           </h2>
       </summary>
       <div class="overflow-hidden max-h-0 transition-all duration-500 ease-in-out group-open:max-h-96">
-          <p class="mt-4 leading-relaxed text-gray-700">
+          <p class="">
               Foco rojo
           </p>
           <p>TKS - 3648</p>
@@ -18,11 +18,14 @@
   </details>
 </div>
 
-<!-- <style>
+<style>
 details > div {
   transition: max-height 0.5s ease-in-out;
 }
 details[open] > div {
   max-height: 1000px; 
 }
-</style> -->
+/* .orderCard{
+  border: 1px solid red
+} */
+</style>
