--- a/src/components/WebPages/orderCard.astro
+++ b/src/components/WebPages/orderCard.astro
@@ -1,7 +1,7 @@
-<div class="orderCard space-y-4 w-11/12 mx-auto rounded-2xl overflow-hidden my-4  border-black border ">
-  <details class="group border-s-8 border-red-500 rounded-2xl bg-gray-100 duration-100 px-2 py-4 [&_summary::-webkit-details-marker]:hidden">
+<div class="orderCard space-y-4 w-11/12 mx-auto rounded-2xl my-4  shadow-lg ">
+  <details class="group border-s-8 border-red-500 rounded-2xl   duration-100 pl-2 py-4 [&_summary::-webkit-details-marker]:hidden">
       <summary class="flex cursor-pointer items-center justify-between gap-1.5 duration-100">
-          <h2 class=" font-medium  ">
+          <h2 class=" font-medium text-xl  ">
              001428 Byron Vladimir Tito Sandoval
           </h2>
       </summary>
@@ -25,7 +25,5 @@ details > div {
 details[open] > div {
   max-height: 1000px; 
 }
-/* .orderCard{
-  border: 1px solid red
-} */
+
 </style>
