--- a/src/pages/WebPages/Control-de-ordenes.astro
+++ b/src/pages/WebPages/Control-de-ordenes.astro
@@ -4,7 +4,7 @@ import OrderCard from "../../components/WebPages/orderCard.astro";
 ---
 
 <Layout title="Kit Components | WebPages">
-    <h1 class="text-6xl text-center mb-5 ">Control de ordenes diarias</h1>
+    <h1 class="text-2xl lg:text-6xl text-center mb-5 ">Control de ordenes diarias con CARDS</h1>
     <OrderCard/>
     <OrderCard/>
     <OrderCard/>
